--- a/src/pages/newHotel/newHotel.scss
+++ b/src/pages/newHotel/newHotel.scss
@@ -38,7 +38,13 @@
 					flex-wrap: wrap;
 					gap: 30px;
 					justify-content: space-between;
-
+					.formSelect {
+						width: 100%;
+						select {
+							width: 100%;
+							padding: 10px;
+						}
+					}
 					.formInput {
 						width: 40%;
 
