--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -1,84 +1,86 @@
 .single {
-  display: flex;
-  width: 100%;
-  .singleContainer {
-    flex: 6;
+	display: flex;
+	width: 100%;
+	.singleContainer {
+		flex: 6;
 
-    .top {
-      padding: 20px;
-      display: flex;
-      gap: 20px;
+		.top {
+			padding: 20px;
+			display: flex;
+			gap: 20px;
+			justify-content: center;
+			.left {
+				width: 40%;
+				-webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+				box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+				padding: 20px;
+				position: relative;
+				display: flex;
+				justify-content: left;
 
-      .left {
-        flex: 1;
-        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-        padding: 20px;
-        position: relative;
+				.title {
+					font-size: 20px;
+					color: rgb(12, 10, 10);
+					margin-bottom: 30px;
+					margin-top: -10px;
+					text-align: center;
+				}
+				.leftWrapper {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+				}
+				.editButton {
+					position: absolute;
+					top: 0;
+					right: 0;
+					padding: 5px;
+					font-size: 12px;
+					color: #7451f8;
+					background-color: #7551f818;
+					cursor: pointer;
+					border-radius: 0px 0px 0px 5px;
+				}
 
-        .editButton {
-          position: absolute;
-          top: 0;
-          right: 0;
-          padding: 5px;
-          font-size: 12px;
-          color: #7451f8;
-          background-color: #7551f818;
-          cursor: pointer;
-          border-radius: 0px 0px 0px 5px;
-        }
+				.item {
+					display: flex;
+					gap: 50px;
 
-        .item {
-          display: flex;
-          gap: 20px;
+					.itemImg {
+						width: 150px;
+						height: 150px;
+						border-radius: 50%;
+						object-fit: cover;
+					}
 
-          .itemImg {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            object-fit: cover;
-          }
+					.details {
+						.itemTitle {
+							margin-bottom: 10px;
+							color: #555;
+						}
 
-          .details {
-            .itemTitle {
-              margin-bottom: 10px;
-              color: #555;
-            }
+						.detailItem {
+							margin-bottom: 10px;
+							font-size: 14px;
+							display: flex;
+							align-items: center;
+							.itemKey {
+								font-weight: bold;
+								color: gray;
+								margin-right: 5px;
+							}
 
-            .detailItem {
-              margin-bottom: 10px;
-              font-size: 14px;
-
-              .itemKey {
-                font-weight: bold;
-                color: gray;
-                margin-right: 5px;
-              }
-
-              .itemValue {
-                font-weight: 300;
-              }
-            }
-          }
-        }
-      }
-
-      .right {
-        flex: 2;
-      }
-    }
-
-    .bottom {
-      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-      padding: 20px;
-      margin: 10px 20px;
-    }
-
-    .title {
-      font-size: 16px;
-      color: lightgray;
-      margin-bottom: 20px;
-    }
-  }
+							.itemValue {
+								flex: 1;
+								font-weight: 300;
+								border: 1px solid rgb(172, 172, 172);
+								padding: 2px 10px;
+								border-radius: 5px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
